--- a/.github/workflows/osv-scanner.yml
+++ b/.github/workflows/osv-scanner.yml
@@ -1,14 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-# A sample workflow which sets up periodic OSV-Scanner scanning for vulnerabilities,
-# in addition to a PR check which fails if new vulnerabilities are introduced.
-#
-# For more examples and options, including how to ignore specific vulnerabilities,
-# see https://google.github.io/osv-scanner/github-action/
-
 name: OSV-Scanner
 
 on:
@@ -17,7 +6,7 @@ on:
   merge_group:
     branches: [ "master" ]
   schedule:
-    - cron: '0 16 * * 6' # Every Saturday at 16:00 UTC, which is Sunday 00:00 GMT+8
+    - cron: '0 16 * * *' # Every day at 16:00 UTC, which is 00:00 GMT+8
   push:
     branches: [ "master" ]
 
